--- a/res/templates/index.html
+++ b/res/templates/index.html
@@ -94,11 +94,10 @@
     <script type="text/javascript" src="res/js/leaflet.markercluster.js"></script>
 
     <script type="text/javascript"> 
-      var map, newUser, cloudmade, cloudmadeAttribution, cloudmadeUrl, users, firstLoad;
+     var map, newUser, cloudmade, cloudmadeAttribution, cloudmadeUrl, users, firstLoad;
 
       firstLoad = true;
-
-      cloudmadeAttribution = 'Map data &copy; 2011 OpenStreetMap contributors, Imagery &copy; 2011  CloudMade'; 
+   cloudmadeAttribution = 'Map data &copy; 2011 OpenStreetMap contributors, Imagery &copy; 2011  CloudMade'; 
       cloudmadeUrl = 'http://{s}.tile.cloudmade.com/64022233ce4f40c6acb6473ccdaec5b3/{styleId}/256/{z}/{x}/{y}.png',
       users = new L.FeatureGroup();
       users = new L.MarkerClusterGroup({spiderfyOnMaxZoom: true, showCoverageOnHover: false, zoomToBoundsOnClick: true});
@@ -160,12 +159,13 @@
         $.getJSON("api/all", function (data) {
           for (var i = 0; i < data.length; i++) {
             var location = new L.LatLng(data[i].latitude, data[i].longitude);
-            var name = data[i].name;
-            var address = data[i].address;
+            var Hostname = data[i].hostname;
+            var OwnerName = data[i].name;
+            var Addr = data[i].Addr;
             var marker = new L.Marker(location, {
-              title: name
+              title: Addr
             });
-            marker.bindPopup("<div style='text-align: center; margin-left: auto; margin-right: auto;'><h1>"+ title +" </h1><br><p>"+ address +"</p></div>", {maxWidth: '400'});
+            marker.bindPopup("<div style='text-align: center; margin-left: auto; margin-right: auto;'>"+ title + Hostname +"</div>", {maxWidth: '400'});
             users.addLayer(marker);
           }
         }).complete(function() {
@@ -175,63 +175,8 @@
           };
         });
       }
-      //not working yet as we're still finalizing the api - ds
-      function insertUser() {
-        $("#loading-mask").show();
-        $("#loading").show();
-        var address = $("#address").val();
-        var name = $("#name").val();
-        var latitude = $("#latitude").val();
-        var longitude = $("#longitude").val();
-        if (name.length == 0) {
-          alert("Name is required!");
-          return false;
-        }
-        if (email.length == 0) {
-          alert("Email is required!");
-          return false;
-        }
-        var dataString = 'name='+ name + '&email=' + email + '&address=' + addr + '&city=' + city + '&latitude=' + latitude + '&longitude=' + longitude;
-        $.ajax({
-          type: "POST",
-          url: "api/add",
-          data: dataString,
-          success: function() {
-            cancelRegistration();
-            users.clearLayers();
-            getUsers();
-            $("#loading-mask").hide();
-            $("#loading").hide();
-            $('#insertSuccessModal').modal('show');
-          }
-        });
-        return false;
-      }
 
-      function onMapClick(e) {
-        var markerLocation = new L.LatLng(e.latlng.lat, e.latlng.lng);
-        var marker = new L.Marker(markerLocation);
-        newUser.clearLayers();
-        newUser.addLayer(marker);
-        var form =  '<form id="inputform" enctype="multipart/form-data" class="well">'+
-              '<label><strong>Name:</strong> <i>marker title</i></label>'+
-              '<input type="text" class="input-medium" placeholder="Required" id="name" name="name" />'+
-              '<label><strong>Email:</strong> <i>never shared</i></label>'+
-              '<input type="text" class="input-medium" placeholder="Required" id="email" name="email" />'+
-              '<label><strong>City:</strong></label>'+
-              '<input type="text" class="input-medium" placeholder="Optional" id="city" name="city" />'+
-              '<label><strong>IPv6:</strong></label>'+
-              '<input type="text" class="input-medium" placeholder="Optional" id="addr" name="addr" value="[ipv6]" />'+
-              '<input style="display: none;" type="text" id="lat" name="lat" value="'+e.latlng.lat.toFixed(6)+'" />'+
-              '<input style="display: none;" type="text" id="lng" name="lng" value="'+e.latlng.lng.toFixed(6)+'" /><br><br>'+
-              '<div class="row-fluid">'+
-                '<div class="span6" style="text-align:center;"><button type="button" class="btn" onclick="cancelRegistration()">Cancel</button></div>'+
-                '<div class="span6" style="text-align:center;"><button type="button" class="btn btn-primary" onclick="insertUser()">Submit</button></div>'+
-              '</div>'+
-              '</form>';
-        marker.bindPopup(form).openPopup();
-      }
-    </script>
+       </script>
 
   </body>
 </html>
